--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,20 @@
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 font-medium border border-dashed focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply py-2 px-4 font-medium border border-dashed focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 hover:ring-energy-yellow-500;
+  }
+}
+
+@layer base {
+  h1 {
+    @apply text-4xl font-semibold;
+  }
+
+  h2 {
+    @apply font-serif uppercase text-xl font-bold;
+  }
+
+  h3 {
+    @apply text-xl font-light;
   }
 }
